--- a/PokedexSwift/Base.lproj/Main.storyboard
+++ b/PokedexSwift/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                     <constraint firstItem="RnE-iM-F57" firstAttribute="centerX" secondItem="5Xg-gN-rIE" secondAttribute="centerX" id="aUT-Ll-TMo"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="pyu-Xb-YEX">
+                            <searchBar contentMode="redraw" placeholder="Search Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="pyu-Xb-YEX">
                                 <rect key="frame" x="0.0" y="60" width="320" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="yHF-LX-MIV"/>
@@ -139,6 +139,7 @@
                     </view>
                     <connections>
                         <outlet property="collection" destination="hIs-At-sjU" id="5gz-se-vcc"/>
+                        <outlet property="searchBar" destination="pyu-Xb-YEX" id="IML-yN-FTc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
